Plotting of 2024I ZB

--- a/plotting_config.yaml
+++ b/plotting_config.yaml
@@ -40,11 +40,11 @@ label_templates:
         'mult': 'Total Object Multiplicity'
         'pt': 'Total Object $p_T$ [GeV]'
     'object_type': # histograms by object type, e.g. total L1 jet multiplicity & pT of all L1 jets in event
-        'ht': '{} $\sum p_T$ [GeV]'
-        'mult': 'Number of {}s'
+        'ht': '${} \sum p_T$ [GeV]'
+        'mult': 'Number of ${}$s'
         'pt': 'All $p_T({})$ [GeV]'
-        'eta': 'All {} $\eta$'
-        'phi': 'All {} $\phi$'
+        'eta': 'All ${}$ $\eta$'
+        'phi': 'All ${}$ $\phi$'
     'object': # histograms by object type, pt ordered, e.g. pT of leading and subleading jets
         'pt': '{} {} $p_T$ [GeV]'
         'eta': '{} {} $\eta$'
@@ -61,7 +61,7 @@ object_label_templates:
    'L1Mu': 'L1 \mu '
    'ScoutingPFJet': 'Jet'
    'ScoutingElectron': 'e'
-   'ScoutingMuonNoVtx': '\mu '
+   'ScoutingMuonNoVtx': '\mu_{{no vtx}} '
    'ScoutingMuonVtx': '\mu '
    'ScoutingPhoton' : '\gamma '
    'Jet': 'Jet'
