--- a/config.yaml
+++ b/config.yaml
@@ -35,13 +35,13 @@ objects:
     # - "Muon"
 
 diobject_pairings: # Which invariant mass pairs to consider
-    # l1:
-    # - ["L1Jet","L1Jet"]
-    # - ["L1EG","L1EG"]
-    # - ["L1Mu","L1Mu"]
+    l1:
+    - ["L1Jet","L1Jet"]
+    - ["L1EG","L1EG"]
+    - ["L1Mu","L1Mu"]
     scouting:
-    # - ["ScoutingPFJet","ScoutingPFJet"]
-    # - ["ScoutingElectron","ScoutingElectron"]
+    - ["ScoutingPFJet","ScoutingPFJet"]
+    - ["ScoutingElectron","ScoutingElectron"]
     - ["ScoutingMuonVtx","ScoutingMuonVtx"] # TODO failing when not filled
     - ["ScoutingElectron", "ScoutingMuonVtx"]
     
