--- a/plotting_config.yaml
+++ b/plotting_config.yaml
@@ -1,5 +1,5 @@
 cms_label : 'Preliminary'  # appears next to 'CMS' on top of plot
-normalized :  False
+normalized :  False #True #
 log_scale : True #False
 
 dataset_titles:
