--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,16 @@
 ---
 # Data configurations --------------------------------------
-json_filename: "file_list.json"  # name of json file containing root file paths
-dataset_name: "2024I_test"            # name of key within json containing dataset
+json_filename: "filelist_new.json"  # name of json file containing root file paths
+dataset_name: "2024G"            # name of key within json containing dataset
 has_scores: True                          # whether the files contain axo anomaly score branches
 axo_version: "v4"                               # which axo version to use for score hists
 
 # Coffea configurations  --------------------------------------
-n_files: -1                               # number of files to process (-1 for all)
+n_files: -1                             # number of files to process (-1 for all)
 coffea_step_size: 200_000                 # step size for coffea processor
 coffea_files_per_batch: 1                 # files per batch for coffea processor
 coffea_max_chunks: 300000                 # maximum number of chunks to process
-do_preprocessing: False                    # create a preprocessing json file 
+do_preprocessing: True                   # create a preprocessing json file 
 visualize_task_graph: False               # save task graph as pdf (only use when processing 1 or 2 files)
 save_hists: True                          # save histograms using pickle
 save_branches: False                       # save branches to parquet file
@@ -19,16 +19,16 @@ save_branches: False                       # save branches to parquet file
 # Object configurations ----------------------------------
 # Which objects to process
 objects: 
-    l1:
-    - "L1Jet"
-    - "L1EG"
-    - "L1Mu"
-    scouting:
-    - "ScoutingPFJet"
-    - "ScoutingElectron"
-    - "ScoutingMuonNoVtx"
-    - "ScoutingMuonVtx"
-    - "ScoutingPhoton"
+    # l1:
+    # - "L1Jet"
+    # - "L1EG"
+    # - "L1Mu"
+    # scouting:
+    # - "ScoutingPFJet"
+    # - "ScoutingElectron"
+    # - "ScoutingMuonNoVtx"
+    # - "ScoutingMuonVtx"
+    # - "ScoutingPhoton"
     # full_reco: # only works on non-scouting datasets
     # - "Jet"
     # - "Electron"
@@ -37,32 +37,32 @@ objects:
 diobject_pairings: # Which invariant mass pairs to consider
     l1:
     - ["L1Jet","L1Jet"]
-    - ["L1EG","L1EG"]
-    - ["L1Mu","L1Mu"]
-    scouting:
-    - ["ScoutingPFJet","ScoutingPFJet"]
-    - ["ScoutingElectron","ScoutingElectron"]
-    - ["ScoutingMuonVtx","ScoutingMuonVtx"] # TODO failing when not filled
-    - ["ScoutingElectron", "ScoutingMuonVtx"]
+    # - ["L1EG","L1EG"]
+    # - ["L1Mu","L1Mu"]
+    # scouting:
+    # - ["ScoutingPFJet","ScoutingPFJet"]
+    # - ["ScoutingElectron","ScoutingElectron"]
+    # - ["ScoutingMuonVtx","ScoutingMuonVtx"] # TODO failing when not filled
+    # - ["ScoutingElectron", "ScoutingMuonVtx"]
     
 # Histograms to make ---------------------------------------
 histograms_1d:
-    per_event: # histograms to make per event
-    - "anomaly_score"
-    - "ht"
-    - "met"
-    - "mult"
-    - "pt"
-    per_object_type: # histograms by object type, e.g. total L1 jet multiplicity & pT of all L1 jets in event
-    - "ht"
-    - "mult"
-    - "pt"
-    - "eta"
-    - "phi"
-    per_object: # histograms by object type, pt ordered, e.g. pT of leading and subleading jets
-    - "pt"
-    - "eta"
-    - "phi"
+    # per_event: # histograms to make per event
+    # - "anomaly_score"
+    # - "ht"
+    # - "met"
+    # - "mult"
+    # - "pt"
+    # per_object_type: # histograms by object type, e.g. total L1 jet multiplicity & pT of all L1 jets in event
+    # - "ht"
+    # - "mult"
+    # - "pt"
+    # - "eta"
+    # - "phi"
+    # per_object: # histograms by object type, pt ordered, e.g. pT of leading and subleading jets
+    # - "pt"
+    # - "eta"
+    # - "phi"
     per_diobject_pair:
     - "mass"
     # - "pt"
