--- a/plotting_config.yaml
+++ b/plotting_config.yaml
@@ -2,6 +2,8 @@ cms_label : 'Preliminary'  # appears next to 'CMS' on top of plot
 normalized :  False #True #
 log_scale : True #False
 
+module : "purity"
+
 dataset_titles:
     '2024F': '2024F'
     '2024G': '2024G'
@@ -18,6 +20,7 @@ dataset_titles:
 
 trigger_labels:
     'all_available_triggers' : 'All triggers'
+    'all_l1_triggers' : 'All L1 triggers'
     'DST_PFScouting_AXOLoose' : 'AXO Loose'
     'DST_PFScouting_AXONominal' : 'AXO Nominal'
     'DST_PFScouting_AXOTight' : 'AXO Tight'
@@ -46,9 +49,9 @@ label_templates:
         'eta': 'All ${}$ $\eta$'
         'phi': 'All ${}$ $\phi$'
     'object': # histograms by object type, pt ordered, e.g. pT of leading and subleading jets
-        'pt': '{} {} $p_T$ [GeV]'
-        'eta': '{} {} $\eta$'
-        'phi': '{} {} $\phi$'
+        'pt': '{} ${}$ $p_T$ [GeV]'
+        'eta': '{} ${}$ $\eta$'
+        'phi': '{} ${}$ $\phi$'
     'diobject':
         'mass': '$m_{{{}{}}} [GeV]$'
         'pt':  '$p_{{T{}{}}} [GeV]$'
@@ -83,3 +86,15 @@ object_level:
        - 'Jet'
        - 'Electron'
        - 'Muon'
+
+rebin:
+    "L1Jet_L1Jet_mass" : 10
+    "L1Mu_L1Mu_mass" : 2
+    "L1EG_L1EG_mass" : 2
+    "L1Mu_L1Mu_pt" : 2
+    "L1Jet_L1EG_mass" : 10
+    "L1Jet_L1Mu_mass" : 10
+    "ScoutingPFJet_ScoutingPFJet_mass" : 10
+    "ScoutingElectron_ScoutingElectron_mass" : 2
+    "ScoutingMuonVtx_ScoutingMuonVtx_mass" : 2
+
