--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 ---
 # Data configurations --------------------------------------
 json_filename: "file_list.json"  # name of json file containing root file paths
-dataset_name: "2024I"            # name of key within json containing dataset
+dataset_name: "2024F_test"            # name of key within json containing dataset
 has_scores: True                          # whether the files contain axo anomaly score branches
 axo_version: "v4"                               # which axo version to use for score hists
 
@@ -10,7 +10,7 @@ n_files: -1                             # number of files to process (-1 for all
 coffea_step_size: 200_000                 # step size for coffea processor
 coffea_files_per_batch: 1                 # files per batch for coffea processor
 coffea_max_chunks: 300000                 # maximum number of chunks to process
-do_preprocessing: True                  # create a preprocessing json file
+do_preprocessing: False                  # create a preprocessing json file
 preprocessing_file: "preprocessed.json"
 visualize_task_graph: False               # save task graph as pdf (only use when processing 1 or 2 files)
 save_hists: True                          # save histograms using pickle
@@ -45,55 +45,74 @@ diobject_pairings: # Which invariant mass pairs to consider
     - ["L1Jet","L1Mu"]
     
     # scouting:
-    - ["ScoutingPFJet","ScoutingPFJet"]
-    - ["ScoutingElectron","ScoutingElectron"]
-    - ["ScoutingMuonVtx","ScoutingMuonVtx"] # TODO failing when not filled
+    - ["ScoutingJet","ScoutingJet"]
+    # - ["ScoutingElectron","ScoutingElectron"]
+    # - ["ScoutingMuonVtx","ScoutingMuonVtx"] # TODO failing when not filled
     # - ["ScoutingElectron", "ScoutingMuonVtx"]
     
 # Histograms to make ---------------------------------------
 histograms_1d:
     per_event: # histograms to make per event
-    # # - "anomaly_score"
+    - "anomaly_score"
     - "ht"
     - "met"
+    - "mult"
+    - "pt"
+    per_object_type: # histograms by object type, e.g. total L1 jet multiplicity & pT of all L1 jets in event
+    - "ht"
     # - "mult"
     # - "pt"
-    # per_object_type: # histograms by object type, e.g. total L1 jet multiplicity & pT of all L1 jets in event
-    # - "ht"
-    # - "mult"
-    # - "pt"
     # - "eta"
     # - "phi"
-    # per_object: # histograms by object type, pt ordered, e.g. pT of leading and subleading jets
-    # - "pt"
+    per_object: # histograms by object type, pt ordered, e.g. pT of leading and subleading jets
+    - "pt"
     # - "eta"
     # - "phi"
-    # per_diobject_pair:
-    # - "mass"
+    per_diobject_pair:
+    - "mass"
     # - "pt"
     # - "eta"
     # - "phi"
     
-histograms_2d: # not implemented yet TODO: implement
-    per_event_vs_per_event:
-    - ["anomaly_score","ht"]
-    - ["anomaly_score","met"]
-    per_event_vs_per_object_type:
-    - ["anomaly_score","mult"]
-    per_event_vs_per_object:
-    - ["anomaly_score","pt"]
-    per_event_vs_per_diobject_pair:
-    - ["anomaly_scpre","mass"]
-    per_object_vs_per_object:
-    - ["eta","phi"]
-    per_diobject_pair_vs_per_diobject_pair:
-    - ["eta","phi"]
+histograms_2d: 
+    # anomaly score vs diobject mass
+    - x_category: "per_event"
+      x_var: "anomaly_score"
+      y_category: "per_diobject_pair"
+      y_var: "mass"
+
+    # # anomaly score vs event ht
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_event"
+    #   y_var: "ht"
+
+    # # anomaly score vs event MET
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_event"
+    #   y_var: "met"
+
+    # # anomaly score vs event mult
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_event"
+    #   y_var: "mult"
+
+    # # anomaly score vs object mult
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_object_type"
+    #   y_var: "mult"
+
+    # # anomaly score vs object pt
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_object_type"
+    #   y_var: "pt"
+
+      
     
-    
-    
-    per_object:
-    per_object_pair:
-    = ["anomaly_score", [""]]
 
 objects_max_i:  # number of objects to plot for pt ordered object plotting
     "ScoutingPFJet" : 4
@@ -131,7 +150,7 @@ orthogonal_trigger: 'DST_PFScouting_ZeroBias' # for efficiency studies
 
 # Object cleaning requirements -------------------------------------
 object_cleaning:
-    "ScoutingPFJet": # https://cms-hlt-scouting.docs.cern.ch/PathsRecoContent/EventContent/
+    "ScoutingJet": # https://cms-hlt-scouting.docs.cern.ch/PathsRecoContent/EventContent/
         pt: [20.0, null] # GeV
         eta: [-2.4, 2.4]
     "ScoutingElectron": # 
