--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 ---
 # Data configurations --------------------------------------
 json_filename: "file_list.json"  # name of json file containing root file paths
-dataset_name: "2024I"            # name of key within json containing dataset
+dataset_name: "2024G_test"            # name of key within json containing dataset
 has_scores: True                          # whether the files contain axo anomaly score branches
 axo_version: "v4"                               # which axo version to use for score hists
 
@@ -48,7 +48,7 @@ diobject_pairings: # Which invariant mass pairs to consider
     - ["ScoutingPFJet","ScoutingPFJet"]
     - ["ScoutingElectron","ScoutingElectron"]
     - ["ScoutingMuonVtx","ScoutingMuonVtx"]
-    # - ["ScoutingElectron", "ScoutingMuonVtx"]
+    - ["ScoutingElectron", "ScoutingMuonVtx"]
     
 # Histograms to make ---------------------------------------
 histograms_1d:
@@ -79,40 +79,37 @@ histograms_2d:
 # for per_diobject_pair histograms, can only plot against other per_diobject_pair histograms or anomaly_score
 
     # anomaly score vs diobject mass
-    - x_category: "per_event"
-      x_var: "anomaly_score"
-      y_category: "per_diobject_pair"
-      y_var: "mass"
+    - x_category:
 
     # anomaly score vs event ht
-    - x_category: "per_event"
-      x_var: "anomaly_score"
-      y_category: "per_event"
-      y_var: "ht"
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_event"
+    #   y_var: "ht"
 
     # anomaly score vs event MET
-    - x_category: "per_event"
-      x_var: "anomaly_score"
-      y_category: "per_event"
-      y_var: "met"
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_event"
+    #   y_var: "met"
 
     # anomaly score vs event mult
-    - x_category: "per_event"
-      x_var: "anomaly_score"
-      y_category: "per_event"
-      y_var: "mult"
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_event"
+    #   y_var: "mult"
 
     # anomaly score vs object mult
-    - x_category: "per_event"
-      x_var: "anomaly_score"
-      y_category: "per_object_type"
-      y_var: "mult"
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_object_type"
+    #   y_var: "mult"
 
     # anomaly score vs object pt
-    - x_category: "per_event"
-      x_var: "anomaly_score"
-      y_category: "per_object_type"
-      y_var: "pt"
+    # - x_category: "per_event"
+    #   x_var: "anomaly_score"
+    #   y_category: "per_object_type"
+    #   y_var: "pt"
 
       
     
@@ -133,8 +130,8 @@ objects_max_i:  # number of objects to plot for pt ordered object plotting
     
 # Which triggers to save (comment out unwanted or add) -----------------------
 triggers:
-    # - 'all_available_triggers'
-    - 'all_l1_triggers'
+    - 'all_available_triggers'
+    # - 'all_l1_triggers'
     # - 'DST_PFScouting_AXOVLoose'
     # - 'DST_PFScouting_AXOLoose' 
     - 'DST_PFScouting_AXONominal'
@@ -145,9 +142,9 @@ triggers:
     # - 'DST_PFScouting_CICADAMedium'
     # - 'DST_PFScouting_CICADATight'
     # - 'DST_PFScouting_CICADAVTight'
-    # - 'DST_PFScouting_DoubleMuon'
+    - 'DST_PFScouting_DoubleMuon'
     # - 'DST_PFScouting_JetHT'
-    # - 'DST_PFScouting_ZeroBias'
+    - 'DST_PFScouting_ZeroBias'
 
 orthogonal_trigger: 'DST_PFScouting_ZeroBias' # for efficiency studies
 
@@ -188,9 +185,9 @@ object_cleaning:
         eta: [-10, 10] 
 
 
-# Modules to run -------------------------------------------
-# module: "default"
-module: "efficiency"
+# Module to run -------------------------------------------
+module: "default"
+# module: "efficiency"
 # module: "purity" 
 # module: "pileup" # TODO: implement
 
