--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 ---
 # Data configurations --------------------------------------
 json_filename: "file_list.json"  # name of json file containing root file paths
-dataset_name: "2024G_test"            # name of key within json containing dataset
+dataset_name: "2024I"            # name of key within json containing dataset
 has_scores: True                          # whether the files contain axo anomaly score branches
 axo_version: "v4"                               # which axo version to use for score hists
 
@@ -54,7 +54,7 @@ diobject_pairings: # Which invariant mass pairs to consider
 # Histograms to make ---------------------------------------
 histograms_1d:
     per_event: # histograms to make per event
-    - "anomaly_score"
+    # - "anomaly_score"
     - "ht"
     - "met"
     # - "mult"
@@ -75,7 +75,7 @@ histograms_1d:
     # - "eta"
     # - "phi"
     
-<<<<<<< HEAD
+
 histograms_2d: 
 # mostly implemented: cannot produce histograms mixed between `per_object`/`per_object_type` and `per_diobject_pair`
 # for per_diobject_pair histograms, can only plot against other per_diobject_pair histograms or anomaly_score
@@ -123,13 +123,11 @@ histograms_2d:
     #   y_var: "mult"
 
       
-    
-=======
 # histograms_2d: # 
 #     - ["anomaly_score","ht"]
 #     - ["anomaly_score","met"]
 #     - ["anomaly_score",["diobject","m"]]
->>>>>>> ed4ae42 (Updated with thresholds config and binomial errors)
+
 
 objects_max_i:  # number of objects to plot for pt ordered object plotting
     "ScoutingPFJet" : 4
@@ -203,8 +201,8 @@ object_cleaning:
 
 
 # Module to run -------------------------------------------
-module: "default"
-# module: "efficiency"
+# module: "default"
+module: "efficiency"
 # module: "purity" 
 # module: "pileup" # TODO: implement
 
